--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0"
 chrono = "0.4"
 clap = "4.5"
+dirs = "5.0"
 lazy_static = "1.5"
-once_cell = "1.19.0"
+once_cell = "1.19"
+serde_json = "1.0"
