--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 chrono = "0.4"
 clap = "4.5"
 dirs = "5.0"
+glob = "0.3.1"
 lazy_static = "1.5"
 once_cell = "1.19"
 serde_json = "1.0"
